--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShoppingListActivity">
+
+        <activity android:name=".TaskListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ShoppingListActivity"></activity>
+        <activity android:name=".AddTenantActivity"></activity>
+        <activity android:name=".FlatActivity"></activity>
+        <activity android:name=".RegisterUserActivity"></activity>
     </application>
 
 </manifest>
